Added additional seed data and added additional comments.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,7 @@
+/********************************
+HEADING
+*********************************/
+
 .main-header {
   padding-top: 250px;
   height: 850px;
